Added WebCommand page

--- a/websocket/client/websocket.html
+++ b/websocket/client/websocket.html
@@ -8,6 +8,6 @@
     <script type="text/javascript" src="chat.js"></script>
 </head>
 <body>
-    <input type="text" value="" id="send">
+    <input type="text" size=50 value="" id="send">
 </body>
 </html>
