--- a/websocket/WebCommand/WebCommand.html
+++ b/websocket/WebCommand/WebCommand.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="css/led.css">
 
     <script type="text/javascript" src="js/jquery-1.7.1.js"></script>
+    <script type="text/javascript" src="js/jquery.vtoggle.js"></script>
     <script type="text/javascript" src="js/slider.js"></script>
     <script type="text/javascript" src="js/command.js"></script>
 
@@ -45,6 +46,9 @@
 <div>
     <input type="button" id="chime" value="Chime" style="width:100px">
     <input type="button" id="led" value="LED" style="width:100px">
+    <hr>
+    <span id="uu" style="visibility:hidden"><img src="./image/uu.png"></span>
+    <span id="nyaa" style="visibility:hidden"><img src="./image/nyaa.png"></span>
 </div>
 </body>
 </html>
