--- a/websocket/WebCommand/WebCommand.html
+++ b/websocket/WebCommand/WebCommand.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "DTD/xhtml1-transitional.dtd">
 <html>
 <head>
-    <title>frequency decoder - accessible, unobtrusive slider demo</title>
+    <title>WebSocket / Node.js DEMO</title>
     <meta http-equiv="Content-Type"         content="text/html; charset=iso-8859-1" />
     <meta name="author"                     content="frequency decoder" />
     <meta name="description"                content="An unobtrusive javascript that turns any text input or selectlist into a keyboard-accessible slider control" />
