Added audio tag

--- a/websocket/WebCommand/WebCommand.html
+++ b/websocket/WebCommand/WebCommand.html
@@ -49,6 +49,8 @@
     <hr>
     <span id="uu" style="visibility:hidden"><img src="./image/uu.png"></span>
     <span id="nyaa" style="visibility:hidden"><img src="./image/nyaa.png"></span>
-</div>
+
+    <audio id="uu_sound" preload="auto">
+    <source src="./image/chime.mp3">
 </body>
 </html>
