--- a/websocket/WebCommand/webcommand.html
+++ b/websocket/WebCommand/webcommand.html
@@ -51,6 +51,8 @@
     <span id="nyaa" style="visibility:hidden"><img src="./image/nyaa.png"></span>
 
     <audio id="uu_sound" preload="auto">
-    <source src="./image/chime.mp3">
+    <source src="./audio/uu.mp3">
+    <audio id="nyaa_sound" preload="auto">
+    <source src="./audio/nyaa.mp3">
 </body>
 </html>
