--- a/websocket/WebCommand/webcommand.html
+++ b/websocket/WebCommand/webcommand.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>WebSocket / Node.js DEMO</title>
+    <meta charset="UTF-8">
+
     <link rel="stylesheet" type="text/css" media="screen, projection" href="css/slider.css" />
     <link rel="stylesheet" type="text/css" href="css/led.css">
 
@@ -11,6 +13,7 @@
     <script type="text/javascript" src="js/command.js"></script>
 </head>
 <body>
+<H1>Node.js + WebSocket によるリアルタイム通信</H1>
 <div id="article-wrapper">
   <form action="" method="post">
     <fieldset>
