--- a/websocket/WebCommand/webcommand.html
+++ b/websocket/WebCommand/webcommand.html
@@ -4,41 +4,38 @@
     <title>WebSocket / Node.js DEMO</title>
     <meta charset="UTF-8">
 
-    <link rel="stylesheet" type="text/css" media="screen, projection" href="css/slider.css" />
-    <link rel="stylesheet" type="text/css" href="css/led.css">
-
-    <script type="text/javascript" src="js/jquery-1.7.1.js"></script>
+    <link rel="stylesheet" href="themes/base/jquery.ui.all.css">
+    <link rel="stylesheet" href="css/slider.css">
+    <script type="text/javascript" src="js/jquery-1.7.2.min.js"></script>
+    <script type="text/javascript" src="js/jquery-ui-1.8.19.custom.min.js"></script>
     <script type="text/javascript" src="js/jquery.vtoggle.js"></script>
-    <script type="text/javascript" src="js/slider.js"></script>
     <script type="text/javascript" src="js/command.js"></script>
+
 </head>
+
 <body>
+
 <H1>Node.js + WebSocket によるリアルタイム通信</H1>
-<div id="article-wrapper">
-  <form action="" method="post">
-    <fieldset>
-      <dl>
-        <dt>
-            <label for="slider-r">Red:</label>
-        </dt>
-        <dd>
-            <input name="slider1" id="slider-r" type="text" title="Range: 0 - 255" class="fd_range_0_255 fd_classname_extraclass fd_callback_updateColor" value="0" />
-        </dd>
-        <dt>
-            <label for="slider-g">Green:</label>
-        </dt>
-        <dd>
-            <input name="slider2" id="slider-g" type="text" title="Range: 0 - 255" class="fd_range_0_255 fd_classname_extraclass fd_callback_updateColor" value="0" />
-        </dd>
-        <dt>
-            <label for="slider-b">Blue:</label>
-        </dt>
-        <dd>
-            <input name="slider3" id="slider-b" type="text" title="Range: 0 - 255" class="fd_range_0_255 fd_classname_extraclass fd_callback_updateColor" value="0" />
-        </dd>
-      </dl>
-    </fieldset>
-  </form>
+
+<div id="jquery-ui-slider" >
+    <div class="jquery-ui-slider-item ">
+        <div class="jquery-ui-slider-title float-left ">RED：</div>
+        <div class="float-left"><input type="text" class="jquery-ui-slider-red-value" /></div>
+        <div class="jquery-ui-slider-multi float-left" id="jquery-ui-slider-red">0</div>
+        <div class="float-clear"></div>
+    </div>
+    <div class="jquery-ui-slider-item ">
+        <div class="jquery-ui-slider-title float-left ">GREEN：</div>
+        <div class="float-left"><input type="text" class="jquery-ui-slider-green-value" /></div>
+        <div class="jquery-ui-slider-multi float-left" id="jquery-ui-slider-green">0</div>
+        <div class="float-clear"></div>
+    </div>
+    <div class="jquery-ui-slider-item ">
+        <div class="jquery-ui-slider-title float-left ">BLUE：</div>
+        <div class="float-left"><input type="text" class="jquery-ui-slider-blue-value" /></div>
+        <div class="jquery-ui-slider-multi float-left" id="jquery-ui-slider-blue">0</div>
+        <div class="float-clear"></div>
+    </div>
 </div>
 <div>
     <input type="button" id="chime" value="Chime" style="width:100px">
@@ -47,7 +44,9 @@
     <span id="uu" style="visibility:hidden"><img src="./image/uu.png"></span>
     <span id="nyaa" style="visibility:hidden"><img src="./image/nyaa.png"></span>
 </div>
-<audio id="uu_sound" preload="auto" source src="./audio/uu.mp3"/>
-<audio id="nyaa_sound" preload="auto" source src="./audio/nyaa.mp3"/>
+<div>
+    <audio id="uu_sound" preload="auto" source src="./audio/uu.mp3"/>
+    <audio id="nyaa_sound" preload="auto" source src="./audio/nyaa.mp3"/>
+</div>
 </body>
 </html>
