--- a/websocket/client/websocket.html
+++ b/websocket/client/websocket.html
@@ -1,10 +1,10 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-        "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html>
 <head>
     <title>WebSocket Sample</title>
+    <meta charset="UTF-8">
+
     <script type="text/javascript" src="jquery-1.7.1.js"></script>
-    <script type="text/javascript" src="jquery.url.js"></script>
     <script type="text/javascript" src="chat.js"></script>
 </head>
 <body>
