<div> to <section> private static final > static final

--- a/websocket/WebCommand/webcommand.html
+++ b/websocket/WebCommand/webcommand.html
@@ -17,7 +17,7 @@
 
 <H1>Node.js + WebSocket によるリアルタイム通信</H1>
 
-<div id="jquery-ui-slider" >
+<section id="jquery-ui-slider" >
     <div class="jquery-ui-slider-item ">
         <div class="jquery-ui-slider-title float-left ">RED：</div>
         <div class="float-left"><input type="text" class="jquery-ui-slider-red-value" /></div>
@@ -36,17 +36,17 @@
         <div class="jquery-ui-slider-multi float-left" id="jquery-ui-slider-blue">0</div>
         <div class="float-clear"></div>
     </div>
-</div>
-<div>
+</section>
+<section>
     <input type="button" id="chime" value="Chime" style="width:100px">
     <input type="button" id="led" value="LED" style="width:100px">
     <hr>
     <span id="uu" style="visibility:hidden"><img src="./image/uu.png"></span>
     <span id="nyaa" style="visibility:hidden"><img src="./image/nyaa.png"></span>
-</div>
-<div>
+</section>
+<section>
     <audio id="uu_sound" preload="auto" source src="./audio/uu.mp3"/>
     <audio id="nyaa_sound" preload="auto" source src="./audio/nyaa.mp3"/>
-</div>
+</section>
 </body>
 </html>
